--- a/additional.css
+++ b/additional.css
@@ -11,14 +11,17 @@
     padding-left: 5px;
 }
 
-.codehilite {
+.highlight {
     border-radius: 10px;
     background: #272822;
     padding: 5px;
-    margin: 5px;
+    margin: 2px;
     word-wrap: break-word;
-    width: 100%;
-    overflow: scroll;
+    overflow: auto;
+}
+
+pre {
+    font-family: consolas;
 }
 
 code {
